# cloud-course-project

./: .gitignore  .pre-commit-config.yaml  Makefile  openapi.json  pyproject.toml  run.sh  try_client.py
.github/workflows/: build-test-publish.yaml
aws_lambda_lab/: publish-lambda-layer-docker.sh  publish-lambda-layer.sh  publish-lambda.sh
aws_lambda_lab/scripts/: lambda_function.py
files-api-sdk/: README.md  setup.py
files-api-sdk/docs/: FileMetadata.md  FilesApi.md  GetFilesResponse.md  PutFileResponse.md
files-api-sdk/files_api_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
files-api-sdk/files_api_sdk/api/: files_api.py
files-api-sdk/files_api_sdk/models/: __init__.py  file_metadata.py  get_files_response.py  http_validation_error.py  put_file_response.py  validation_error.py  validation_error_loc_inner.py
files-api-sdk/test/: test_files_api.py
notebooks/: hw__learn_s3_client.py
src/files_api/: errors.py  generate_files.py  main.py  routes.py  s3.py  schemas.py  settings.py
src/files_api/s3/: read_objects.py  write_objects.py
tests/: conftest.py  consts.py  utils.py
tests/fixtures/: api_client.py  mocked_aws.py  mocked_openai.py
tests/mocks/: openai_fastapi_mock_app.py
tests/unit_tests/: test__main.py  test__routes__error_cases.py  test__routes__happy_path.py
tests/unit_tests/s3/: test__delete_objects.py  test__read_objects.py  test__write_objects.py
